# Homework2

./: AirVehicle.cpp  AirVehicle.h  Boat.cpp  Boat.h  CMakeLists.txt  Car.cpp  Car.h  Course.cpp  Course.h  Header File.h  Helicopter.cpp  Helicopter.h  LMS.cpp  LMS.h  LandVehicle.cpp  LandVehicle.h  MyStack.h  SportsCar.cpp  SportsCar.h  Student.cpp  Student.h  Submarine.cpp  Submarine.h  Truck.cpp  Truck.h  Vehicle.h  WaterVehicle.cpp  WaterVehicle.h  main.cpp  practise  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp  problems.h
